--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,93 @@
-h1{
-  font-family: 'Raleway', sans-serif;;
-  font-size: 20px;
+
+
+.login-content{
+    height: 75%;
+    width: 70%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 10px;
+    box-shadow: 5px 5px 48px -6px rgba(0,0,0,0.5);
+    display: flex;
+    justify-content: space-between;
 }
+
+.img{
+    width: 50%;
+    height: 100%;
+    padding: 0 50px;
+}
+
+.img img{
+    width: 100%;
+    height: 100%;
+}
+
+
+.login-form{
+    background: #4779AF ;
+    padding: 50px;
+    width: 50%;
+    height: 100%;
+    border-radius: 0px 10px 10px 0px;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.login-form h1{
+  display: block;
+  color: white;
+  padding: 20px 0;
+  font-weight: 700;
+  font-size: 30;
+}
+
+input{
+    width: 100%;
+    border-radius: 30px;
+    border: none;
+    height: 3em;
+    font-size: 15px;
+    margin: 10px 0;
+    padding: 0 30px;
+    display: grid;
+    grid-template-columns: 15% 85%;
+  }
+
+  .registration-content{
+      height: 75%;
+      width: 70%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 10px;
+      box-shadow: 5px 5px 48px -6px rgba(0,0,0,0.5);
+      display: flex;
+      justify-content: space-between;
+  }
+
+  .registration-form{
+      background: #4779AF ;
+      padding: 50px;
+      width: 50%;
+      height: 100%;
+      border-radius: 0px 10px 10px 0px;
+      align-items: center;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+
+  }
+
+  .registration-form h1{
+    display: block;
+    color: white;
+    padding: 20px 0;
+    font-weight: 700;
+    font-size: 30;
+  }
