--- a/style.css
+++ b/style.css
@@ -104,36 +104,46 @@ font-size: 30;
 }
 input{
   
-  border-radius: 30px;
+  border-radius: 20px;
   border: none;
   height: 3em;
   font-size: 15px;
-  margin: 10px 10px;
+  margin: 5px 10px;
   padding: 0 30px;
   
-  grid-template-columns: 15% 85%;
+ 
 }
+
 
 select{
   
-  border-radius: 30px;
+  border-radius: 20px;
   border: none;
   height: 3em;
   font-size: 15px;
-  margin: 10px 10px;
+  margin: 5px 10px;
   padding: 0 30px;
-  
-  grid-template-columns: 15% 85%;
 }
 
 textarea{
   width: 75%;
   border-radius: 30px;
   border: none;
-  height: 5em;
+  height: 4em;
   font-size: 15px;
   margin: 10px 10px;
   padding: 0 30px;
   
   grid-template-columns: 15% 85%;
+}
+
+.img{
+  width: 50%;
+  height: 100%;
+  padding: 0 50px;
+}
+
+.img img{
+  width: 100%;
+  height: 100%;
 }
