--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,3 +1,36 @@
-<h1 class="mt-4">Dashboard</h1>
-<p class="lead mb-3">Welcome <%= user.name %></p>
+//insert navbar
+     <div class='welcome-card'>
+<p class="title">Welcome %= user.name %</p>
 <a href="/patients/logout" class="btn btn-secondary">Logout</a>
+<a href="" class="btn btn-secondary">Account</a>
+    
+</div>
+  
+<div class='notifications'>
+    <p class="lead mb-3">Notifications</p>
+    <a href="" class="btn btn-secondary">Reschedule</a>
+    <a href="" class="btn btn-secondary">Cancel</a>
+</div>
+
+<div class='p-documents'>
+        <h1 class="lead mb-3">Health Care Card</h1>
+        <a>Full Name</a>
+        <a>Expiry date:</a>
+        <p>Specialist Referrals/Medical Certs</p>
+</div>
+
+<div class='prescriptions'>
+  <h1 class= 'prescrip'> Prescriptions</h1>
+    <p class="lead mb-3">Current Precriptions</p>
+    <p>Medicine Name:</p>
+    <p>Dosage:</p>
+    <p> Send a message to your doctor if you have any questions</p>
+    <a href="" class="btn btn-secondary">Send Message</a>
+</div>
+
+<div class='book-appointment'>
+  <h1 class= 'book-app'> Book</h1>
+    <p class="lead mb-3"></p>
+    <p>Book your next appointment now!</p>
+    <a href="" class="btn btn-secondary">Book Appointment</a>
+</div>
