--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,13 +1,48 @@
-  
-<div class="row mt-5">
-    <div class="col-md-6 m-auto">
-      <div class="card card-body text-center">
-        <h1><i class="fab fa-node-js fa-3x"></i></h1>
-        <p>Create an account or login</p>
-        <a href="/patients/register" class="btn btn-primary btn-block mb-2"
-          >Register</a
-        >
-        <a href="/patients/login" class="btn btn-secondary btn-block">Login</a>
-      </div>
-    </div>
+<nav class="navbar bg-light navbar-expand-lg navbar-light">
+  <a class="navbar-brand" href="#">
+    <img src="https://www.pngkey.com/png/full/33-337638_medicine-logo-png-1-medical-logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+    E-HEALTH
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/patients/register">Patients</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/doctors/doctorregister">Doctors</a>
+      </li>
+    </ul>
   </div>
+</nav>
+
+  
+
+         
+     
+    <main>
+        <h2 style = "font-family: STKaiti; color:blue; font-size:60px;text-align:center">Stay Safe & Healthy 24/7 </h2>  
+        <h2 style = "font-family: STHupo; color:blue; font-size:40px;text-align:center;background-color: yellow;">BOOK AN APPOINTMENT NOW </h2>
+    </main>
+
+    <footer class=footer style =" position:absolute;bottom:0px;left:10px; color:black;font-size:20px;font-family:Arial;">
+      <span class = "floatingLeft">Contact Info:</span>
+      <a href = "#Top"> ↑Back to Top↑</a>
+      
+    </footer>
+   
+    <style>
+      a {text-decoration:none; color:black;} 
+      a:hover{text-decoration:underline; color:blue;}
+   </style> 
+    <div>
+
+    </div>
+  </body>
+
+</html>
