--- a/views/doctorlogin.ejs
+++ b/views/doctorlogin.ejs
@@ -21,28 +21,29 @@
   </div>
 </nav>
 
+
 <div class="row mt-5">
     <div class="col-md-6 m-auto">
       <div class="card card-body">
-        <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Login</h1>
+        <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i> Doctor Login</h1>
        
-        <form action="/patients/login" method="POST">
+        <form action="/doctors/doctorlogin" method="POST">
           <div class="form-group">
-            <label for="email">Email</label>
+            <label for="demail">Email</label>
             <input
               type="email"
-              id="email"
-              name="email"
+              id="demail"
+              name="demail"
               class="form-control"
               placeholder="Enter Email"
             />
           </div>
           <div class="form-group">
-            <label for="password">Password</label>
+            <label for="dpassword">Password</label>
             <input
               type="password"
-              id="password"
-              name="password"
+              id="dpassword"
+              name="dpassword"
               class="form-control"
               placeholder="Enter Password"
             />
@@ -50,7 +51,7 @@
           <button type="submit" class="btn btn-primary btn-block">Login</button>
         </form>
         <p class="lead mt-4">
-          No Account? <a href="/patients/register">Register</a>
+          No Account? <a href="/doctors/doctorregister">Register</a>
         </p>
       </div>
     </div>
